[project]
name = "ComfyUI_CryptoCat"
description = "a lightweight open-source node for ComfyUI, designed to simplify workflows while providing encryption protection for them."
version = "2.2.0"
license = {file = "LICENSE"}
dependencies = ["pyzipper", "aiohttp", "websockets"]

[project.urls]
Repository = "https://github.com/RiceRound/ComfyUI_CryptoCat"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "riceround"
DisplayName = "ComfyUI_CryptoCat"
Icon = "https://www.riceround.online/CryptoCat.svg"
